--- a/css/main.css
+++ b/css/main.css
@@ -88,11 +88,36 @@ textarea {
    ========================================================================== */
 .content-wrapper {
   outline: 3px dotted red;
+  width: 90%;
+}
+
+h1 {
+  font-size: 2.25em;
+  line-height: 2.6875em;
+  font-weight: 500;
+}
+
+h2 {
+  margin: 0;
+  font-size: 1.875em;
+  font-weight: 500;
+}
+
+h3,
+h4 {
+  font-size: 1.125em;
+  font-weight: 500;
+}
+
+p {
+  font-size: 0.875em;
+  line-height: 1.125em;
 }
 
 header {
   display: flex;
   justify-content: center;
+  padding: 15px 0 10px 0;
 }
 
 header .content-wrapper {
@@ -100,11 +125,34 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
+}
+
+header figure {
+  margin: 0;
+}
+
+.header-divider {
+  width: 80%;
+  display: flex;
+  border: #3a3a3a 1px solid;
+}
+
+header nav {
+  width: 60%;
+  padding: 20px 0 15px 0;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
+  margin: 0;
+}
+
+header nav ul li {
+  font-size: 1.125em;
+  font-weight: bold;
 }
 
 .hero-area {
@@ -112,9 +160,17 @@ header nav ul {
   justify-content: center;
 }
 
+.hero-area .content-wrapper {
+  padding: 50px 0;
+}
+
 aside {
   display: flex;
   justify-content: center;
+}
+
+aside .content-wrapper {
+  padding: 50px 0;
 }
 
 .features {
@@ -122,11 +178,37 @@ aside {
   justify-content: center;
 }
 
+.features .content-wrapper {
+  padding: 50px 0;
+}
+
+.features .content-wrapper h2 {
+  padding-bottom: 60px;
+}
+
+.fontawesome-icon {
+  size: 3.75em;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
+  padding: 30px 0;
+}
+
+.features article {
+  width: 60%;
+  padding: 30px 0;
+}
+
+.features-item-description {
+  padding-top: 40px;
+}
+
+.features p {
+  margin: 0;
 }
 
 .reviews {
@@ -134,11 +216,53 @@ aside {
   justify-content: center;
 }
 
+.reviews .content-wrapper {
+  padding: 50px 0;
+}
+
+.reviews h2 {
+  line-height: 1.875em;
+}
+
+.reviews h3 {
+  width: 50%;
+  padding: 20px 0;
+}
+
 footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact {
+  padding: 50px 0;
+}
+
+footer .contact h4 {
+  padding: 20px 0;
+}
+
+footer .contact-content {
+  margin: 0;
+}
+
+footer address p {
+  font-style: normal;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .social h4 {
+  padding: 20px 0;
 }
 
 footer .social-icons {
@@ -153,11 +277,28 @@ footer .social-icons p {
   align-items: center;
 }
 
+footer .social-icons p a {
+  size: 1.3125em;
+}
+
+footer .copyright {
+  padding-top: 50px;
+}
+
+footer .copyright p {
+  padding: 20px 0;
+}
+
 /*==========================================================================
 About page
 ==========================================================================*/
 
 .mission {
+  display: flex;
+  justify-content: center;
+}
+
+.map {
   display: flex;
   justify-content: center;
 }
@@ -181,6 +322,21 @@ FAQ page
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
+  padding: 50px 0;
+  width: 90%;
+}
+
+.faq h2 {
+  padding-bottom: 40px;
+  line-height: 1.875em;
+}
+
+.faq-content {
+  padding-bottom: 50px 0;
+}
+
+.faq-content h4 {
+  line-height: 1.5em;
 }
 
 /* ==========================================================================
