--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,7 @@ textarea {
 .content-wrapper {
   outline: 3px dotted red;
   width: 90%;
+  margin: 50px 0;
 }
 
 h1 {
@@ -133,9 +134,9 @@ header figure {
 }
 
 .header-divider {
-  width: 80%;
-  display: flex;
-  border: #3a3a3a 1px solid;
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -160,17 +161,9 @@ header nav ul li {
   justify-content: center;
 }
 
-.hero-area .content-wrapper {
-  padding: 50px 0;
-}
-
 aside {
   display: flex;
   justify-content: center;
-}
-
-aside .content-wrapper {
-  padding: 50px 0;
 }
 
 .features {
@@ -178,11 +171,7 @@ aside .content-wrapper {
   justify-content: center;
 }
 
-.features .content-wrapper {
-  padding: 50px 0;
-}
-
-.features .content-wrapper h2 {
+.features h2 {
   padding-bottom: 60px;
 }
 
@@ -199,7 +188,7 @@ aside .content-wrapper {
 }
 
 .features article {
-  width: 60%;
+  width: 63%;
   padding: 30px 0;
 }
 
@@ -216,16 +205,12 @@ aside .content-wrapper {
   justify-content: center;
 }
 
-.reviews .content-wrapper {
-  padding: 50px 0;
-}
-
 .reviews h2 {
   line-height: 1.875em;
 }
 
 .reviews h3 {
-  width: 50%;
+  width: 55%;
   padding: 20px 0;
 }
 
@@ -238,18 +223,17 @@ footer {
 
 footer .content-wrapper {
   width: 55%;
-  margin: 50px 0;
 }
 
 footer .contact {
-  padding: 50px 0;
+  margin: 50px 0;
 }
 
 footer .contact h4 {
   padding: 20px 0;
 }
 
-footer .contact-content {
+footer .contact-content p {
   margin: 0;
 }
 
@@ -322,7 +306,7 @@ FAQ page
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
-  padding: 50px 0;
+
   width: 90%;
 }
 
@@ -427,15 +411,135 @@ FAQ page
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /*Tablet styles here*/
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
+
+  header {
+    padding: 33px 0;
+  }
+
+  header .content-wrapper {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .header-divider {
+    display: none;
+  }
+
+  header nav {
+    width: 20%;
+  }
+
+  header nav ul {
+    justify-content: space-between;
+  }
+
+  aside .content-wrapper {
+    margin: 50px 0;
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 40%;
+    margin: 0;
+  }
+
+  .features article {
+    display: flex;
+    align-items: center;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+  }
+
+  .features-item-description {
+    width: 50%;
+  }
+
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews article div {
+    width: 49%;
+  }
+
+  footer .content-wrapper {
+    width: 65%;
+  }
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  footer .contact {
+    margin-bottom: 0;
+  }
+
+  footer .copyright {
+    width: 100%;
+  }
+
+  /*About page*/
+  .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-top: 20px;
+  }
+
+  .mission-content p {
+    width: 45%;
+  }
+
+  .contact-section .content-wrapper h2 {
+    width: 80%;
+  }
+
+  .contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  /*FAQ page*/
+  .faq .content-wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .faq-content {
+    width: 45%;
+  }
+
+  .faq h2 {
+    width: 100%;
+  }
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+@media only screen and (min-width: 1200px) {
+  /*Desktop styles here*/
+  .faq .content-wrapper {
+    justify-content: space-between;
+  }
+
+  .faq-content {
+    flex-basis: 45%;
+  }
+
+  .faq h2 {
+    width: 100%;
+  }
 }
 
 /* ==========================================================================
