Added css for desktop to all pages

--- a/css/main.css
+++ b/css/main.css
@@ -514,7 +514,6 @@ FAQ page
 
   /*FAQ page*/
   .faq .content-wrapper {
-    display: flex;
     justify-content: space-between;
   }
 
@@ -529,14 +528,45 @@ FAQ page
 
 @media only screen and (min-width: 1200px) {
   /*Desktop styles here*/
-  .faq .content-wrapper {
-    justify-content: space-between;
+  .content-wrapper {
+    max-width: 960px;
+  }
+  header {
+    padding: 15px 0;
   }
 
-  .faq-content {
-    flex-basis: 45%;
+  .hero-area h1 {
+    width: 80%;
   }
 
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 30%;
+  }
+
+  .features h2 {
+    width: 90%;
+  }
+
+  .features article {
+    flex-basis: 33%;
+  }
+
+  .reviews article div {
+    width: 42%;
+  }
+
+  /*About page*/
+  .mission h2,
+  .contact-section .content-wrapper h2 {
+    width: 95%;
+  }
+
+  /*FAQ page*/
   .faq h2 {
     width: 100%;
   }
