--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,56 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/* General Styles */
+
+html {
+  font-size: 1rem;
+}
+
+body {
+  font-family: "open sans", sans-serif;
+  font-size: 1em;
+}
+
+ul,
+ol {
+  font-size: 1.125em;
+  font-weight: bold;
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.875em;
+  font-weight: 500;
+}
+
+h3,
+h4 {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.125em;
+  font-weight: 500;
+}
+
+p {
+  font-size: 0.875em;
+  line-height: 1.125em;
+}
+
+img {
+}
+
+figure {
+}
+
+address {
+  font-style: normal;
+}
+
 .content-wrapper {
   outline: 3px dotted red;
   width: 90%;
@@ -100,19 +150,6 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 1.875em;
-  font-weight: 500;
-}
-
-h3,
-h4 {
-  font-size: 1.125em;
-  font-weight: 500;
-}
-
-p {
-  font-size: 0.875em;
-  line-height: 1.125em;
 }
 
 header {
@@ -149,11 +186,6 @@ header nav ul {
   justify-content: space-around;
   width: 100%;
   margin: 0;
-}
-
-header nav ul li {
-  font-size: 1.125em;
-  font-weight: bold;
 }
 
 .hero-area {
@@ -235,10 +267,6 @@ footer .contact h4 {
 
 footer .contact-content p {
   margin: 0;
-}
-
-footer address p {
-  font-style: normal;
 }
 
 footer p {
