Map html and css without .content-wrapper

--- a/css/main.css
+++ b/css/main.css
@@ -628,6 +628,10 @@ FAQ page
     width: 45%;
   }
 
+  .map figure {
+    padding-bottom: 45%;
+  }
+
   .contact-section .content-wrapper h2 {
     width: 80%;
   }
